# project

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
app/: server.py
app/static/js/: scripts.js
app/templates/: index.html
classification_model/: binary_classification.py  file.json
file1/: binary_classification.py  file.json
tests/: test_train_model.py
