[tool.poetry]
name = "pytorch-vis"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.3.0"
fastapi = "^0.111.1"
websockets = "^12.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
